Change index.html for custom domain
Signed-off-by: Chikachi <chikachi@chikachi.net>

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         }
 
         var newGif = sources[i];
-        var url = '/JoinFCInfo/nopes/' + newGif.gif + '.gif';
+        var url = '/nopes/' + newGif.gif + '.gif';
 
         $background.style.backgroundImage = 'url(\'' + url + '\')';
         $gif.style.backgroundImage = 'url(\'' + url + '\')';
